--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -612,32 +612,16 @@ video {
   top: 0px;
 }
 
-.col-span-1 {
-  grid-column: span 1 / span 1;
+.z-10 {
+  z-index: 10;
 }
 
-.col-span-2 {
-  grid-column: span 2 / span 2;
+.-m-4 {
+  margin: -1rem;
 }
 
-.col-span-3 {
-  grid-column: span 3 / span 3;
-}
-
-.col-span-4 {
-  grid-column: span 4 / span 4;
-}
-
-.row-span-1 {
-  grid-row: span 1 / span 1;
-}
-
-.m-auto {
-  margin: auto;
-}
-
-.m-10 {
-  margin: 2.5rem;
+.-m-5 {
+  margin: -1.25rem;
 }
 
 .-mx-4 {
@@ -708,6 +692,10 @@ video {
   margin-right: 0.5rem;
 }
 
+.mt-0 {
+  margin-top: 0px;
+}
+
 .mt-1 {
   margin-top: 0.25rem;
 }
@@ -724,32 +712,28 @@ video {
   margin-top: 1rem;
 }
 
-.mt-9 {
-  margin-top: 2.25rem;
+.mt-5 {
+  margin-top: 1.25rem;
 }
 
 .mt-6 {
   margin-top: 1.5rem;
 }
 
-.mt-5 {
-  margin-top: 1.25rem;
+.mt-9 {
+  margin-top: 2.25rem;
 }
 
-.mt-0 {
-  margin-top: 0px;
+.-mb-5 {
+  margin-bottom: -1.25rem;
 }
 
-.ml-5 {
-  margin-left: 1.25rem;
+.-mb-6 {
+  margin-bottom: -1.5rem;
 }
 
-.ml-10 {
-  margin-left: 2.5rem;
-}
-
-.mt-2 {
-  margin-top: 0.5rem;
+.mb-0 {
+  margin-bottom: 0px;
 }
 
 .block {
@@ -776,15 +760,6 @@ video {
   height: auto;
 }
 
-.h-full {
-  height: 100%;
-}
-
-.h-max {
-  height: -moz-max-content;
-  height: max-content;
-}
-
 .w-10 {
   width: 2.5rem;
 }
@@ -805,32 +780,8 @@ video {
   width: 6rem;
 }
 
-.w-5\/6 {
-  width: 83.333333%;
-}
-
 .w-full {
   width: 100%;
-}
-
-.w-2\/5 {
-  width: 40%;
-}
-
-.w-1 {
-  width: 0.25rem;
-}
-
-.w-2\/6 {
-  width: 33.333333%;
-}
-
-.w-3\/6 {
-  width: 50%;
-}
-
-.w-auto {
-  width: auto;
 }
 
 .max-w-2xl {
@@ -857,18 +808,6 @@ video {
   list-style-type: none;
 }
 
-.grid-cols-3 {
-  grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
-.grid-cols-5 {
-  grid-template-columns: repeat(5, minmax(0, 1fr));
-}
-
-.grid-cols-7 {
-  grid-template-columns: repeat(7, minmax(0, 1fr));
-}
-
 .flex-row {
   flex-direction: row;
 }
@@ -879,14 +818,6 @@ video {
 
 .flex-wrap {
   flex-wrap: wrap;
-}
-
-.items-start {
-  align-items: flex-start;
-}
-
-.items-end {
-  align-items: flex-end;
 }
 
 .items-center {
@@ -903,6 +834,14 @@ video {
 
 .justify-around {
   justify-content: space-around;
+}
+
+.gap-1 {
+  gap: 0.25rem;
+}
+
+.gap-10 {
+  gap: 2.5rem;
 }
 
 .gap-2 {
@@ -925,12 +864,8 @@ video {
   gap: 2rem;
 }
 
-.gap-3 {
-  gap: 0.75rem;
-}
-
-.gap-10 {
-  gap: 2.5rem;
+.place-self-center {
+  place-self: center;
 }
 
 .overflow-visible {
@@ -945,12 +880,21 @@ video {
   border-radius: 0.75rem;
 }
 
-.border-2 {
-  border-width: 2px;
+.rounded-md {
+  border-radius: 0.375rem;
 }
 
 .border-0 {
   border-width: 0px;
+}
+
+.border-2 {
+  border-width: 2px;
+}
+
+.border-x-0 {
+  border-left-width: 0px;
+  border-right-width: 0px;
 }
 
 .border-y-2 {
@@ -970,12 +914,13 @@ video {
   border-top-width: 2px;
 }
 
-.border-r-2 {
-  border-right-width: 2px;
-}
-
 .border-dotted {
   border-style: dotted;
+}
+
+.border-black {
+  --tw-border-opacity: 1;
+  border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
 }
 
 .border-chocolatecosmos-default {
@@ -988,11 +933,6 @@ video {
   border-color: rgb(72 159 181 / var(--tw-border-opacity, 1));
 }
 
-.border-licorice-default {
-  --tw-border-opacity: 1;
-  border-color: rgb(50 32 36 / var(--tw-border-opacity, 1));
-}
-
 .border-t-chocolatecosmos-default {
   --tw-border-opacity: 1;
   border-top-color: rgb(92 10 29 / var(--tw-border-opacity, 1));
@@ -1001,6 +941,11 @@ video {
 .bg-licorice-default {
   --tw-bg-opacity: 1;
   background-color: rgb(50 32 36 / var(--tw-bg-opacity, 1));
+}
+
+.bg-moonstone-default {
+  --tw-bg-opacity: 1;
+  background-color: rgb(72 159 181 / var(--tw-bg-opacity, 1));
 }
 
 .bg-timberwolf {
@@ -1013,43 +958,42 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-moonstone-default {
-  --tw-bg-opacity: 1;
-  background-color: rgb(72 159 181 / var(--tw-bg-opacity, 1));
-}
-
 .bg-chocolatecosmos-default {
   --tw-bg-opacity: 1;
   background-color: rgb(92 10 29 / var(--tw-bg-opacity, 1));
+}
+
+.bg-black {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
 }
 
 .p-1 {
   padding: 0.25rem;
 }
 
+.p-10 {
+  padding: 2.5rem;
+}
+
 .p-2 {
   padding: 0.5rem;
+}
+
+.p-3 {
+  padding: 0.75rem;
 }
 
 .p-4 {
   padding: 1rem;
 }
 
-.p-9 {
-  padding: 2.25rem;
-}
-
-.p-10 {
-  padding: 2.5rem;
-}
-
 .p-5 {
   padding: 1.25rem;
 }
 
-.px-10 {
-  padding-left: 2.5rem;
-  padding-right: 2.5rem;
+.p-9 {
+  padding: 2.25rem;
 }
 
 .px-2 {
@@ -1087,8 +1031,20 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.pb-1 {
+  padding-bottom: 0.25rem;
+}
+
 .pb-10 {
   padding-bottom: 2.5rem;
+}
+
+.pl-5 {
+  padding-left: 1.25rem;
+}
+
+.pt-1 {
+  padding-top: 0.25rem;
 }
 
 .pt-10 {
@@ -1103,20 +1059,20 @@ video {
   padding-top: 1.25rem;
 }
 
-.pt-0 {
-  padding-top: 0px;
+.pb-2 {
+  padding-bottom: 0.5rem;
 }
 
-.pr-4 {
-  padding-right: 1rem;
+.pb-3 {
+  padding-bottom: 0.75rem;
 }
 
-.pr-3 {
-  padding-right: 0.75rem;
+.pb-1\.5 {
+  padding-bottom: 0.375rem;
 }
 
-.pr-0 {
-  padding-right: 0px;
+.pt-1\.5 {
+  padding-top: 0.375rem;
 }
 
 .text-left {
@@ -1127,12 +1083,8 @@ video {
   text-align: center;
 }
 
-.text-right {
-  text-align: right;
-}
-
-.align-bottom {
-  vertical-align: bottom;
+.font-serif {
+  font-family: ui-serif, Georgia, Cambria, "Times New Roman", Times, serif;
 }
 
 .text-2xl {
@@ -1177,6 +1129,10 @@ video {
   font-weight: 600;
 }
 
+.italic {
+  font-style: italic;
+}
+
 .text-black {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity, 1));
@@ -1202,6 +1158,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
+.text-timberwolf {
+  --tw-text-opacity: 1;
+  color: rgb(208 203 200 / var(--tw-text-opacity, 1));
+}
+
 .underline {
   text-decoration-line: underline;
 }
@@ -1218,10 +1179,25 @@ video {
   text-underline-offset: 4px;
 }
 
+.opacity-0 {
+  opacity: 0;
+}
+
+.grayscale {
+  --tw-grayscale: grayscale(100%);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
+
 .transition {
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, -webkit-backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter;
   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke, opacity, box-shadow, transform, filter, backdrop-filter, -webkit-backdrop-filter;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
+.transition-opacity {
+  transition-property: opacity;
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
   transition-duration: 150ms;
 }
@@ -1232,6 +1208,10 @@ video {
 
 .duration-500 {
   transition-duration: 500ms;
+}
+
+.duration-300 {
+  transition-duration: 300ms;
 }
 
 .ease-in-out {
@@ -1258,6 +1238,16 @@ video {
   background-color: rgb(208 203 200 / var(--tw-bg-opacity, 1));
 }
 
+.hover\:bg-black:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
+}
+
+.hover\:bg-white:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
+}
+
 .hover\:text-chocolatecosmos-default:hover {
   --tw-text-opacity: 1;
   color: rgb(92 10 29 / var(--tw-text-opacity, 1));
@@ -1266,6 +1256,26 @@ video {
 .hover\:text-white:hover {
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
+}
+
+.hover\:opacity-20:hover {
+  opacity: 0.2;
+}
+
+.hover\:opacity-40:hover {
+  opacity: 0.4;
+}
+
+.hover\:opacity-50:hover {
+  opacity: 0.5;
+}
+
+.hover\:opacity-80:hover {
+  opacity: 0.8;
+}
+
+.hover\:opacity-60:hover {
+  opacity: 0.6;
 }
 
 .group:hover .group-hover\:block {
@@ -1314,6 +1324,10 @@ video {
     grid-column: span 4 / span 4;
   }
 
+  .lg\:m-5 {
+    margin: 1.25rem;
+  }
+
   .lg\:mx-auto {
     margin-left: auto;
     margin-right: auto;
@@ -1324,17 +1338,20 @@ video {
     margin-bottom: 2.5rem;
   }
 
-  .lg\:mx-10 {
-    margin-left: 2.5rem;
-    margin-right: 2.5rem;
-  }
-
   .lg\:ml-10 {
     margin-left: 2.5rem;
   }
 
-  .lg\:mr-14 {
-    margin-right: 3.5rem;
+  .lg\:ml-auto {
+    margin-left: auto;
+  }
+
+  .lg\:mr-5 {
+    margin-right: 1.25rem;
+  }
+
+  .lg\:mt-8 {
+    margin-top: 2rem;
   }
 
   .lg\:flex {
@@ -1343,6 +1360,10 @@ video {
 
   .lg\:w-1\/2 {
     width: 50%;
+  }
+
+  .lg\:w-1\/4 {
+    width: 25%;
   }
 
   .lg\:w-16 {
@@ -1365,8 +1386,39 @@ video {
     width: 80%;
   }
 
-  .lg\:list-none {
-    list-style-type: none;
+  .lg\:w-5\/6 {
+    width: 83.333333%;
+  }
+
+  .lg\:w-full {
+    width: 100%;
+  }
+
+  .lg\:w-screen {
+    width: 100vw;
+  }
+
+  .lg\:w-fit {
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+
+  .lg\:w-auto {
+    width: auto;
+  }
+
+  .lg\:w-max {
+    width: -moz-max-content;
+    width: max-content;
+  }
+
+  .lg\:min-w-min {
+    min-width: -moz-min-content;
+    min-width: min-content;
+  }
+
+  .lg\:min-w-px {
+    min-width: 1px;
   }
 
   .lg\:list-disc {
@@ -1385,12 +1437,24 @@ video {
     gap: 3rem;
   }
 
-  .lg\:border-r-2 {
-    border-right-width: 2px;
+  .lg\:rounded-md {
+    border-radius: 0.375rem;
+  }
+
+  .lg\:rounded-xl {
+    border-radius: 0.75rem;
   }
 
   .lg\:border-b-0 {
     border-bottom-width: 0px;
+  }
+
+  .lg\:border-r-2 {
+    border-right-width: 2px;
+  }
+
+  .lg\:p-0 {
+    padding: 0px;
   }
 
   .lg\:p-9 {
@@ -1416,36 +1480,28 @@ video {
     padding-bottom: 1.5rem;
   }
 
+  .lg\:pb-8 {
+    padding-bottom: 2rem;
+  }
+
   .lg\:pl-40 {
     padding-left: 10rem;
-  }
-
-  .lg\:pt-6 {
-    padding-top: 1.5rem;
-  }
-
-  .lg\:pt-0 {
-    padding-top: 0px;
-  }
-
-  .lg\:pr-5 {
-    padding-right: 1.25rem;
   }
 
   .lg\:pr-14 {
     padding-right: 3.5rem;
   }
 
-  .lg\:pr-20 {
-    padding-right: 5rem;
+  .lg\:pt-10 {
+    padding-top: 2.5rem;
   }
 
-  .lg\:pr-0 {
-    padding-right: 0px;
+  .lg\:pt-6 {
+    padding-top: 1.5rem;
   }
 
-  .lg\:pr-1 {
-    padding-right: 0.25rem;
+  .lg\:pb-5 {
+    padding-bottom: 1.25rem;
   }
 
   .lg\:text-right {
@@ -1467,18 +1523,13 @@ video {
     line-height: 1;
   }
 
-  .lg\:text-xl {
-    font-size: 1.25rem;
-    line-height: 1.75rem;
-  }
-
   .lg\:text-sm {
     font-size: 0.875rem;
     line-height: 1.25rem;
   }
 
-  .lg\:text-lg {
-    font-size: 1.125rem;
+  .lg\:text-xl {
+    font-size: 1.25rem;
     line-height: 1.75rem;
   }
 
