feat: add main content to sample project page feat: copy header and footer to sample project page feat: add sample project images to images folder

--- a/assets/css/site.css
+++ b/assets/css/site.css
@@ -612,16 +612,12 @@ video {
   top: 0px;
 }
 
-.z-10 {
-  z-index: 10;
-}
-
 .-m-4 {
   margin: -1rem;
 }
 
-.-m-5 {
-  margin: -1.25rem;
+.m-20 {
+  margin: 5rem;
 }
 
 .-mx-4 {
@@ -649,6 +645,11 @@ video {
   margin-right: auto;
 }
 
+.my-10 {
+  margin-top: 2.5rem;
+  margin-bottom: 2.5rem;
+}
+
 .my-4 {
   margin-top: 1rem;
   margin-bottom: 1rem;
@@ -662,6 +663,11 @@ video {
 .my-7 {
   margin-top: 1.75rem;
   margin-bottom: 1.75rem;
+}
+
+.my-14 {
+  margin-top: 3.5rem;
+  margin-bottom: 3.5rem;
 }
 
 .-mb-2 {
@@ -724,20 +730,28 @@ video {
   margin-top: 2.25rem;
 }
 
-.-mb-5 {
-  margin-bottom: -1.25rem;
+.mb-10 {
+  margin-bottom: 2.5rem;
 }
 
-.-mb-6 {
-  margin-bottom: -1.5rem;
+.mb-14 {
+  margin-bottom: 3.5rem;
 }
 
-.mb-0 {
-  margin-bottom: 0px;
+.mt-14 {
+  margin-top: 3.5rem;
+}
+
+.mt-12 {
+  margin-top: 3rem;
 }
 
 .block {
   display: block;
+}
+
+.inline-block {
+  display: inline-block;
 }
 
 .flex {
@@ -758,6 +772,15 @@ video {
 
 .h-auto {
   height: auto;
+}
+
+.h-full {
+  height: 100%;
+}
+
+.h-min {
+  height: -moz-min-content;
+  height: min-content;
 }
 
 .w-10 {
@@ -784,6 +807,44 @@ video {
   width: 100%;
 }
 
+.w-max {
+  width: -moz-max-content;
+  width: max-content;
+}
+
+.w-4\/6 {
+  width: 66.666667%;
+}
+
+.w-3\/6 {
+  width: 50%;
+}
+
+.w-auto {
+  width: auto;
+}
+
+.w-4\/12 {
+  width: 33.333333%;
+}
+
+.w-fit {
+  width: -moz-fit-content;
+  width: fit-content;
+}
+
+.w-3\/12 {
+  width: 25%;
+}
+
+.w-9\/12 {
+  width: 75%;
+}
+
+.w-10\/12 {
+  width: 83.333333%;
+}
+
 .max-w-2xl {
   max-width: 42rem;
 }
@@ -800,8 +861,24 @@ video {
   max-width: 36rem;
 }
 
+.max-w-md {
+  max-width: 28rem;
+}
+
+.max-w-11 {
+  max-width: 2.75rem;
+}
+
+.max-w-lg {
+  max-width: 32rem;
+}
+
 .flex-1 {
   flex: 1 1 0%;
+}
+
+.cursor-pointer {
+  cursor: pointer;
 }
 
 .list-none {
@@ -868,6 +945,10 @@ video {
   place-self: center;
 }
 
+.overflow-hidden {
+  overflow: hidden;
+}
+
 .overflow-visible {
   overflow: visible;
 }
@@ -876,12 +957,12 @@ video {
   border-radius: 0.25rem;
 }
 
-.rounded-xl {
-  border-radius: 0.75rem;
-}
-
 .rounded-md {
   border-radius: 0.375rem;
+}
+
+.rounded-xl {
+  border-radius: 0.75rem;
 }
 
 .border-0 {
@@ -918,11 +999,6 @@ video {
   border-style: dotted;
 }
 
-.border-black {
-  --tw-border-opacity: 1;
-  border-color: rgb(0 0 0 / var(--tw-border-opacity, 1));
-}
-
 .border-chocolatecosmos-default {
   --tw-border-opacity: 1;
   border-color: rgb(92 10 29 / var(--tw-border-opacity, 1));
@@ -943,11 +1019,6 @@ video {
   background-color: rgb(50 32 36 / var(--tw-bg-opacity, 1));
 }
 
-.bg-moonstone-default {
-  --tw-bg-opacity: 1;
-  background-color: rgb(72 159 181 / var(--tw-bg-opacity, 1));
-}
-
 .bg-timberwolf {
   --tw-bg-opacity: 1;
   background-color: rgb(208 203 200 / var(--tw-bg-opacity, 1));
@@ -958,14 +1029,9 @@ video {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
 }
 
-.bg-chocolatecosmos-default {
-  --tw-bg-opacity: 1;
-  background-color: rgb(92 10 29 / var(--tw-bg-opacity, 1));
-}
-
-.bg-black {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
+.object-cover {
+  -o-object-fit: cover;
+     object-fit: cover;
 }
 
 .p-1 {
@@ -1031,8 +1097,8 @@ video {
   padding-bottom: 1.5rem;
 }
 
-.pb-1 {
-  padding-bottom: 0.25rem;
+.pb-1\.5 {
+  padding-bottom: 0.375rem;
 }
 
 .pb-10 {
@@ -1043,8 +1109,8 @@ video {
   padding-left: 1.25rem;
 }
 
-.pt-1 {
-  padding-top: 0.25rem;
+.pt-1\.5 {
+  padding-top: 0.375rem;
 }
 
 .pt-10 {
@@ -1059,28 +1125,16 @@ video {
   padding-top: 1.25rem;
 }
 
-.pb-2 {
-  padding-bottom: 0.5rem;
-}
-
-.pb-3 {
-  padding-bottom: 0.75rem;
-}
-
-.pb-1\.5 {
-  padding-bottom: 0.375rem;
-}
-
-.pt-1\.5 {
-  padding-top: 0.375rem;
-}
-
 .text-left {
   text-align: left;
 }
 
 .text-center {
   text-align: center;
+}
+
+.align-middle {
+  vertical-align: middle;
 }
 
 .font-serif {
@@ -1158,9 +1212,9 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.text-timberwolf {
+.text-gray-700 {
   --tw-text-opacity: 1;
-  color: rgb(208 203 200 / var(--tw-text-opacity, 1));
+  color: rgb(55 65 81 / var(--tw-text-opacity, 1));
 }
 
 .underline {
@@ -1177,10 +1231,6 @@ video {
 
 .underline-offset-4 {
   text-underline-offset: 4px;
-}
-
-.opacity-0 {
-  opacity: 0;
 }
 
 .grayscale {
@@ -1202,20 +1252,38 @@ video {
   transition-duration: 150ms;
 }
 
-.duration-1000 {
-  transition-duration: 1000ms;
+.transition-all {
+  transition-property: all;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
 }
 
-.duration-500 {
-  transition-duration: 500ms;
+.duration-1000 {
+  transition-duration: 1000ms;
 }
 
 .duration-300 {
   transition-duration: 300ms;
 }
 
+.duration-500 {
+  transition-duration: 500ms;
+}
+
 .ease-in-out {
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hover\:scale-150:hover {
+  --tw-scale-x: 1.5;
+  --tw-scale-y: 1.5;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
+.hover\:scale-125:hover {
+  --tw-scale-x: 1.25;
+  --tw-scale-y: 1.25;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
 }
 
 .hover\:border-timberwolf:hover {
@@ -1238,16 +1306,6 @@ video {
   background-color: rgb(208 203 200 / var(--tw-bg-opacity, 1));
 }
 
-.hover\:bg-black:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(0 0 0 / var(--tw-bg-opacity, 1));
-}
-
-.hover\:bg-white:hover {
-  --tw-bg-opacity: 1;
-  background-color: rgb(255 255 255 / var(--tw-bg-opacity, 1));
-}
-
 .hover\:text-chocolatecosmos-default:hover {
   --tw-text-opacity: 1;
   color: rgb(92 10 29 / var(--tw-text-opacity, 1));
@@ -1258,24 +1316,12 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity, 1));
 }
 
-.hover\:opacity-20:hover {
-  opacity: 0.2;
-}
-
-.hover\:opacity-40:hover {
-  opacity: 0.4;
-}
-
-.hover\:opacity-50:hover {
-  opacity: 0.5;
-}
-
-.hover\:opacity-80:hover {
-  opacity: 0.8;
-}
-
 .hover\:opacity-60:hover {
   opacity: 0.6;
+}
+
+.hover\:focus\:-inset-44:focus:hover {
+  inset: -11rem;
 }
 
 .group:hover .group-hover\:block {
@@ -1342,16 +1388,32 @@ video {
     margin-left: 2.5rem;
   }
 
-  .lg\:ml-auto {
-    margin-left: auto;
-  }
-
   .lg\:mr-5 {
     margin-right: 1.25rem;
   }
 
   .lg\:mt-8 {
     margin-top: 2rem;
+  }
+
+  .lg\:mb-10 {
+    margin-bottom: 2.5rem;
+  }
+
+  .lg\:mt-6 {
+    margin-top: 1.5rem;
+  }
+
+  .lg\:mt-10 {
+    margin-top: 2.5rem;
+  }
+
+  .lg\:mt-12 {
+    margin-top: 3rem;
+  }
+
+  .lg\:mt-14 {
+    margin-top: 3.5rem;
   }
 
   .lg\:flex {
@@ -1390,35 +1452,8 @@ video {
     width: 83.333333%;
   }
 
-  .lg\:w-full {
-    width: 100%;
-  }
-
-  .lg\:w-screen {
-    width: 100vw;
-  }
-
-  .lg\:w-fit {
-    width: -moz-fit-content;
-    width: fit-content;
-  }
-
-  .lg\:w-auto {
-    width: auto;
-  }
-
-  .lg\:w-max {
-    width: -moz-max-content;
-    width: max-content;
-  }
-
-  .lg\:min-w-min {
-    min-width: -moz-min-content;
-    min-width: min-content;
-  }
-
-  .lg\:min-w-px {
-    min-width: 1px;
+  .lg\:w-4\/12 {
+    width: 33.333333%;
   }
 
   .lg\:list-disc {
@@ -1435,14 +1470,6 @@ video {
 
   .lg\:gap-12 {
     gap: 3rem;
-  }
-
-  .lg\:rounded-md {
-    border-radius: 0.375rem;
-  }
-
-  .lg\:rounded-xl {
-    border-radius: 0.75rem;
   }
 
   .lg\:border-b-0 {
@@ -1480,10 +1507,6 @@ video {
     padding-bottom: 1.5rem;
   }
 
-  .lg\:pb-8 {
-    padding-bottom: 2rem;
-  }
-
   .lg\:pl-40 {
     padding-left: 10rem;
   }
@@ -1492,16 +1515,12 @@ video {
     padding-right: 3.5rem;
   }
 
-  .lg\:pt-10 {
-    padding-top: 2.5rem;
-  }
-
   .lg\:pt-6 {
     padding-top: 1.5rem;
   }
 
-  .lg\:pb-5 {
-    padding-bottom: 1.25rem;
+  .lg\:text-center {
+    text-align: center;
   }
 
   .lg\:text-right {
